--- a/ej14/info_hab.html
+++ b/ej14/info_hab.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset= "UTF-8">
   <title>Pagina Habitaciones</title>
-  <link rel="stylesheet" type="text/css" href="habitaciones.css">
+  <link rel="stylesheet" href="vista/estiloProyecto.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     </div>
     <nav class="header">
       <ul>
-        <li><a href="index.html">INICIO</a></li>
+        <li><a href="index.php">INICIO</a></li>
         <li><a href="info_hab.html">HABITACIONES</a></li>
         <li><a href="serv_hotel.html">SERVICIOS</a></li>
         <li><a href="registro.html">RECEPCIÓN</a></li>
