--- a/ej14/serv_hotel.html
+++ b/ej14/serv_hotel.html
@@ -18,7 +18,7 @@
     </div>
     <nav class="header">
       <ul>
-        <li><a href="index.html">INICIO</a></li>
+        <li><a href="index.php">INICIO</a></li>
         <li><a href="info_hab.html">HABITACIONES</a></li>
         <li><a href="serv_hotel.html">SERVICIOS</a></li>
         <li><a href="registro.html">REGISTRO</a></li>
